    + Ignore whitespace changes in diffs
  * dget: Correctly handle the processing of a file that we've already
    retrieved (Closes: #445546)
  * wnpp-alert: Note in the manpage that the results are source package
    based
  * debchange:
    - Modify --closes to use SOAP / Debbugs.pm
    - Add hardy (heron) to the list of supported Ubuntu distributions

  [ Christoph Berg ]
  * dget:
    + Make unpacking downloaded source packages the default, use -d for the
      old behaviour.
    + Check signature of source packages using dscverify, use -u to disable.
      (Closes: #434521)

  [ Patrick Schoenfeld ]
  * licensecheck: Support a less common form of MIT license usage

 -- Patrick Schoenfeld <schoenfeld@in-medias-res.com>  Wed, 20 Feb 2008 11:24:10 +0100

devscripts (2.10.16) unstable; urgency=low

  The "storm before the calm" release

  * checkbashisms:
    + Correct the $(<) check to not flag $(<foo grep bar) (Closes: #464522)
    + Tighten the $(( / (( regex
    + Modify the ". foo bar" check to allow ". `foo bar`" (Closes: #464984)
    + Ensure that an explanation is provided for the ". foo bar" check
    + Fix the "shell wrapper" regex to allow a space after ; and before exec
      (Closes: #464976)
    + Add posh to the list of supported interpreters. Thanks to Raphael
      Geissert.
    + Warn about use of >& and <& redirecting to a file (POSIX specifies
      behaviour for - and file descriptors only) (Really closes: #461653)
  * debbugs.pm: New module to encapsulate some of the common BTS functionality
    used by various scripts. Currently contains initial support for some
    SOAP methods.
  * bts: Use debbugs.pm for select()
  * tagpending: Fix the bts select call to also handle forwarded bugs
    (Closes: #464787)
  * debchange: Warn if the package appears to have switched from Debian native
    to non-native or vice versa (Closes: #440957)
  * uscan: Don't insist on an upstream version being supplied on the command